Android horizontal scroll fix, app h2 margin fix

--- a/src/components/carousel/styles.scss
+++ b/src/components/carousel/styles.scss
@@ -292,10 +292,13 @@ margin-left: 0;
         font-size: 20px;
         line-height: 24px;
         display: inline-block;
+        margin: 0;
         margin-top: -35px;
         padding-left: 10px;
         padding-right: 10px;
         padding-top: 4px;
+        z-index: 9999999;
+        position: relative;
         background: $news-red;
         @include mq(desktop) {
           font-size: 22px;
